setup for persistence - marshmallow, sqlalchemy
